web-infras/parser/tests/fixtures/esprima/ES6/for-of/invalid-for-of-object-pattern/output.txt
[SyntaxError]: 'for-of' loop variable declaration may not have an initializer. (1,16)
1|for (var {x} = y of z);
 |              ^
